--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# Promptherder generated artifacts
 .promptherder/
+.agent/
+.agents/
+.antigravity/
+.github/prompts/
+.github/instructions/
+.github/copilot-instructions.md
